CHANGES.txt for Tux Paint

Tux Paint - A simple drawing program for children.

Copyright (c) 2002-2006 by Bill Kendrick and others
bill@newbreedsoftware.com
http://www.newbreedsoftware.com/tuxpaint/

$Id$


2006.December.21 (0.9.17)

  * Tool Improvements:
    ------------------
    * Stamps now supports SVG vector-based graphics!  (Via Cairo library)
      (Experimental; build with "make nosvg" to disable SVG support and
      Cairo dependency.)

    * Bilinear interpolation (smoothing) is done to small bitmap (PNG)
      stamps when they are scaled up.
      (Based on example code by Christian Graus:
      http://www.codeproject.com/cs/media/imageprocessing4.asp )

  * Documentation Improvements:
    ---------------------------
    * Discussed SVG Stamps in "Extending Tux Paint."

    * Created an "SVG.txt" document, covering SVG software.

    * Mentioned descriptive sounds (e.g., "stamp_desc_ll.ogg") in "Extending..."

    * Listing new www.tuxpaint.org website URL.

    * Expanded MinGW/MSYS GCC compilation instructions for building Win32.


  * Translation Updates:
    --------------------
    * Basque
      Juan Irigoien <juanirigoien@gmail.com>

    * Lithuanian
      Gintaras Gostautas <gintaras@nes.lt>


2006.October.19 (0.9.16)

  * Interface improvements:
    -----------------------
    * New slideshow tool! ("Slides", available in "Open" dialog.)
      Select each image to play, in the order you want them, and use the
      sliding scale to adjust speed, then click "Play" to begin the show.

      + The "Next" button and [Space], [Enter] and [Right Arrow] keys
        advance to the next slide manually.  (Clicking anywhere in the image
        advances, as well.)
      + The [Left Arrow] key goes to the previous slide.
      + The "Back" button and [Escape] ends playback.

      Note: Use slowest (leftmost) speed setting to disable automatic
      slide advancement.

    * Modified "Text" tool so that it correctly handles the 16-bit unicode